typo error fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="paper container" id="app">
     <header>
-        <h1 class="site-title">Materiales</h1>
+        <h1 class="site-title">Minerales</h1>
         <p class="site-claim">Colección de materiales de Imanol.</p>
     </header>
     <hr>
