--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="paper container" id="app">
     <header>
         <h1 class="site-title">Minerales</h1>
-        <p class="site-claim">Colección de materiales de Imanol.</p>
+        <p class="site-claim">Colección de minerales de Imanol.</p>
     </header>
     <hr>
     <main>
